# MyRPG

./: .gitignore  .gitmodules  CMakeLists.txt
areas/: battle.json  overworld.json  save.json  title.json  town.json
game/: .gitignore  CMakeLists.txt
game/include/Game/: Battle.h  BattleMenu.h  DialogueBox.h  Enemy.h  EnemyInBattle.h  GameOver.h  Level.h  Menu.h  MenuItem.h  NPC.h  Obstacle.h  Player.h  PlayerInBattle.h  SaveMenu.h  SaveScene.h  SaveSpot.h  Sword.h  TitleMenu.h  TitleScene.h  TownSpot.h  Weapon.h
game/src/: Battle.cpp  BattleMenu.cpp  Enemy.cpp  GameOver.cpp  Level.cpp  Menu.cpp  Obstacle.cpp  Player.cpp  PlayerInBattle.cpp  Sword.cpp  main.cpp
game/src/Battle/: Battle.cpp  BattleMenu.cpp  EnemyInBattle.cpp  MenuItem.cpp  PlayerInBattle.cpp  Weapon.cpp
game/src/OverWorld/: DialogueBox.cpp  Enemy.cpp  Level.cpp  NPC.cpp  Player.cpp  SaveSpot.cpp  TownSpot.cpp
game/src/Title/: SaveMenu.cpp  SaveScene.cpp  TitleMenu.cpp  TitleScene.cpp
savestate/: currentArea.json  saveBattle.json  saveGame.json  saveOverWorld.json
shaders/: basic.frag  texture.frag  texture.vert
